syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "gender.proto";

option go_package = "github.com/dritelabs/accounts/pb";


message Profile {
  string id = 1;
  string user_id = 2;
  google.protobuf.Timestamp birthdate = 3;
  Gender gender = 4;
  string locale = 5;
  string given_name = 6;
  string middle_name = 7;
  string nickname = 8;
  string profile = 9;
  string picture = 10;
  string website = 11;
  string zoneinfo = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}